# FemtoGPT

./: CMakeLists.txt  CharTransformer.cpp  LICENSE  Optimizers.cpp  ParamFunc.cpp  ParamFunc.h  Presentation.tex  README.md  adam.py  main.cpp
Windows/: FemtoGPT.sln  FemtoGPT.vcxproj  FemtoGPT.vcxproj.filters
datasets/Shakespeare/: attention_128_64.txt  attention_64_16.txt  attention_64_16_BIS.txt  attention_64_32_1.txt  attention_64_32_2.txt  attention_64_64_2.txt  tiny-shakespeare.txt  vocabulary.txt
